locktree/tests/compilefail/declare_async_mutex_without_explicit_hkt.rs
use locktree::locktree;

locktree! {
    Main {
        mutex: async Mutex<()>
    }
}

fn main() {}
